# cpe_senior_project

./: .cproject  .mxproject  .project  rtos_test2.ioc
Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
desktop_app/: CMakeLists.txt  README.md
desktop_app/src/: connection_settings.cpp  connection_settings.hpp  das.cpp  das.hpp  ecg_tab.cpp  ecg_tab.hpp  graph_area.cpp  graph_area.hpp  hello.cpp  hello.hpp  main.cpp  main_app.cpp  main_app.hpp  oximeter_tab.cpp  oximeter_tab.hpp  temperature_tab.cpp  temperature_tab.hpp
mcu_src/: .gitignore  .mxproject  rtos_test2.ioc
pcb/: 2021-02-16_22-10-11.lib  LL3301NF065QG.mod  MLPF-WB55-01E3.lib  UJ2-MIBH2-4-SMT-TR.lib  ZTP-148SRC1.lib  ZTP-148SRC1.mod
pcb/kicad_pretty/: AD8232ACPZ-R7.kicad_mod  UJ2MIBH24SMTTR.kicad_mod  ZTP148SRC1.kicad_mod  luci.kicad_mod
pcb/senior_project_pcb/: .gitignore  _autosave-power.sch  ecg.sch  ecg.sch-bak  fp-info-cache  fp-lib-table  io.sch  io.sch-bak  power.sch  power.sch-bak  pulse_oxy.sch  pulse_oxy.sch-bak  rf.sch  rf.sch-bak  senior_project_pcb-cache.lib  senior_project_pcb-rescue.lib  senior_project_pcb.csv  senior_project_pcb.kicad_pcb  senior_project_pcb.kicad_pcb-bak  senior_project_pcb.kicad_prl  senior_project_pcb.kicad_pro  senior_project_pcb.pro  senior_project_pcb.sch  senior_project_pcb.sch-bak  sym-lib-table  temp_sensor.sch  temp_sensor.sch-bak
pcb/stm32wb55ccu/: stm32wb55cc.lib
wsp_src/: .cproject  .gitignore  .mxproject  .project  STM32WB55CEUX_FLASH.ld  STM32WB55CEUX_RAM.ld  spamm_wsp.ioc
(+42 files in other folders)
